--- a/_posts/2011-04-15-Cream-Ale.md
+++ b/_posts/2011-04-15-Cream-Ale.md
@@ -5,25 +5,25 @@ title: Cream Ale
 
 ## Ingredents ##
 ### Malts ###
-3.5 pounds Extra Light Dry Malt Extract
-3 pounds Weiss (Wheat) Dry Malt Extract
-1 pound Caramel 60L
+3.5 pounds Extra Light Dry Malt Extract  
+3 pounds Weiss (Wheat) Dry Malt Extract  
+1 pound Caramel 60L  
 
 ### Hops ###
-15/16 ounce Cascade pellet hops (5.0 alpha)
-1/2 ounce Saaz pellet hops (6.8 alpha)
-1/2 ounce Spalt pellet hops (2.0 alpha)
+15/16 ounce Cascade pellet hops (5.0 alpha)  
+1/2 ounce Saaz pellet hops (6.8 alpha)  
+1/2 ounce Spalt pellet hops (2.0 alpha)  
 
 ### Yeast ###
-Wyeast German Ale (1007)
+Wyeast German Ale (1007)  
 
 ### Others ###
-1 tablespoon Irish Moss
-16+ ounces Lactose
-6 ounces Vanilla Extract
+1 tablespoon Irish Moss  
+16+ ounces Lactose  
+6 ounces Vanilla Extract  
 
 ## Recipie ##
-Makes 5 gallons.
+Makes 5 gallons.  
 
 1. Steep the Caramel in 2 gallons of 150 - 165 degree water for 45 minutes.
 2. Remove the Caramel and rinse with 1/2 gallon of water into the 2 gallons boiled.
@@ -42,25 +42,25 @@ Makes 5 gallons.
 
 ## Work Log ##
 ### Friday, April 15, 2011 ###
-18:00 - Activate smack pack of Wyeast German Ale yeast.
-22:00 - pitch yeast into starter and let sit.
+18:00 - Activate smack pack of Wyeast German Ale yeast.  
+22:00 - pitch yeast into starter and let sit.  
 
 ### Sat, April 16, 2011 ###
-11:50 - Put 2 gallons of water on the burner
-12:05 - Water temp 150+. Trying to stabilize between 150 - 165 for steeping
-12:25 - Water stable@ 160 adding 1# 60L Caramel to steep for 45 minutes
-12:35 - Sanitized Primary and air lock. added 2 Gal of water to the primary.
-13:10 - Remove Caramel and rinse with 1/2 gal water. 
-13:30 - Bring water to boil. Add 3# Wheat DME and 3# Extra Light DME and 7/8oz Cascade (5.0 alpha) pellet hops.
-14:15 - Add 1/2oz of Saaz (6.8 alpha) pellet hops to the boil
-14:20 - Add 4oz of Lactose to the boil
-14:25 - Add 1tsp of Irish Moss to the boil
-14:35 - Kill the heat and add 1/2oz of Spalt (2.0) pellet hops
-14:36 - Take boil off heat and add to primary through double mesh filter. Pitch the yeast.  Add 2oz of vanilla. Top off to just over 5 gal.
-14:45 - Stored in cool (~70F), dark place.
+11:50 - Put 2 gallons of water on the burner.  
+12:05 - Water temp 150+. Trying to stabilize between 150 - 165 for steeping.  
+12:25 - Water stable@ 160 adding 1# 60L Caramel to steep for 45 minutes.  
+12:35 - Sanitized Primary and air lock. added 2 Gal of water to the primary.  
+13:10 - Remove Caramel and rinse with 1/2 gal water.     
+13:30 - Bring water to boil. Add 3# Wheat DME and 3# Extra Light DME and 7/8oz Cascade (5.0 alpha) pellet hops.  
+14:15 - Add 1/2oz of Saaz (6.8 alpha) pellet hops to the boil.  
+14:20 - Add 4oz of Lactose to the boil.  
+14:25 - Add 1tsp of Irish Moss to the boil.  
+14:35 - Kill the heat and add 1/2oz of Spalt (2.0) pellet hops.  
+14:36 - Take boil off heat and add to primary through double mesh filter. Pitch the yeast.  Add 2oz of vanilla. Top off to just over 5 gal.  
+14:45 - Stored in cool (~70F), dark place.  
 
-OG: 1.050
-O%: 6%
-OB: 12.5
+OG: 1.050  
+O%: 6%  
+OB: 12.5  
 
 ## Results ##
