Updated with move from primary to secondary.

--- a/_posts/2011-04-15-Cream-Ale.md
+++ b/_posts/2011-04-15-Cream-Ale.md
@@ -59,8 +59,19 @@ Makes 5 gallons.
 14:36 - Take boil off heat and add to primary through double mesh filter. Pitch the yeast.  Add 2oz of vanilla. Top off to just over 5 gal.  
 14:45 - Stored in cool (~70F), dark place.  
 
+Gravity: 1.050
+Percentage: 6%
+Balling Point: 12.5
+
+### Sun, April 24, 2011 ###
+11:10 - Siphoned from primary fermenter to secondary fermenter and put back into its cool dark space.
+
+Gravity: 1.020
+Percentage: 1.75%
+Balling Point: 5
+
+## Results ##
+
 OG: 1.050  
 O%: 6%  
 OB: 12.5  
-
-## Results ##
